--- a/pages/sweat.html
+++ b/pages/sweat.html
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="card">
-			<img src="../images/nô.jpg" alt="Sweat">
+			<img src="../images/no.jpg" alt="Sweat">
 			<h3>Nô</h3>	
 		</div>
 
