--- a/pages/wac.html
+++ b/pages/wac.html
@@ -21,7 +21,7 @@
 		</div>
 
 		<div class="card">
-			<img src="../images/nô.jpg" alt="Sweat">
+			<img src="../images/no.jpg" alt="Sweat">
 			<h3>Nô</h3>	
 		</div>
 
